Added surprise on critical miss
Fixed multi-monster attacking
Swap and trade undo sex and race effects before swapping now
Fixed class attribute requirements
